@@ -1,4 +1,5 @@
 0.5.3
+ * Escape elements values in opendocument template
 
 0.5.2 - 20091108
  * Fix guess_type for long value
